# Synapsploit

./: .gitignore  README.md  index.html  package.json
src/: App.css  App.tsx  app.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: ico.icns
src-tauri/src/: commands.rs  lib.rs  macsploit.rs  main.rs  msapi.rs
src-tauri/src/commands/: config.rs  macsploit.rs  settings.rs  window.rs
src/components/index/: Button.tsx  ButtonContainer.tsx  Editor.tsx  EditorContainer.tsx  FooterContainer.tsx  Header.tsx  HeaderButton.tsx  HeaderButtonContainer.tsx  Icon.tsx  Main.tsx  NewTab.tsx  Script.tsx  ScriptContainer.tsx  Tab.tsx  TabContainer.tsx  Title.tsx
src/components/options/: Button.tsx  Footer.tsx  Header.tsx  Icon.tsx  Main.tsx  Option.tsx  OptionContainer.tsx  SelectOption.tsx  SettingContainer.tsx  Tab.tsx  TabContainer.tsx  Title.tsx
src/pages/: index.tsx  options.tsx
src/routes/: +page.svelte
src/routes/options/: +page.svelte
src/routes/popup/: +page.svelte
src/routes/scripthub/: +page.svelte
src/stores/: session.ts
static/: worker-lua.js
