[package]
name = "synapsploit"
version = "1.2.1"
description = "Synapse UI for MacSploit"
authors = ["DollarNoob"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "fs-read-dir", "fs-read-file", "fs-write-file", "dialog-save", "dialog-open", "window-set-always-on-top", "system-tray", "window-unminimize", "window-close", "window-unmaximize", "window-maximize", "window-show", "window-hide", "window-minimize", "window-start-dragging", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14.1"
tauri-plugin-context-menu = "0.8.0"
toml = "0.8.16"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
